[gd_scene load_steps=2 format=3 uid="uid://wyy20tm0bhda"]

[ext_resource type="Script" path="res://scenes/cheats.gd" id="1_px3bt"]

[node name="Cheats" type="Node2D"]
script = ExtResource("1_px3bt")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 13.0
offset_top = 14.0
offset_right = 639.0
offset_bottom = 342.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 626.0
offset_bottom = 328.0
color = Color(0.0901961, 0, 0.52549, 1)

[node name="Label" type="Label" parent="."]
offset_right = 624.0
offset_bottom = 23.0
text = "==================== CHEATS ==================== "
horizontal_alignment = 1
vertical_alignment = 1

[node name="bnt_coin" type="Button" parent="."]
offset_left = 8.0
offset_top = 34.0
offset_right = 79.0
offset_bottom = 65.0
text = "Coins+"

[node name="bnt_plant" type="Button" parent="."]
offset_left = 8.0
offset_top = 90.0
offset_right = 79.0
offset_bottom = 121.0
text = "Plant"

[node name="bnt_spring" type="Button" parent="."]
offset_left = 104.0
offset_top = 90.0
offset_right = 175.0
offset_bottom = 121.0
text = "Spring"

[node name="bnt_level" type="Button" parent="."]
offset_left = 197.0
offset_top = 90.0
offset_right = 268.0
offset_bottom = 121.0
text = "LevelUp"

[node name="bnt_muffin" type="Button" parent="."]
offset_left = 119.0
offset_top = 34.0
offset_right = 190.0
offset_bottom = 65.0
text = "Muffin"

[node name="bnt_clone" type="Button" parent="."]
offset_left = 206.0
offset_top = 34.0
offset_right = 277.0
offset_bottom = 65.0
text = "Clone"

[node name="bnt_teleport" type="Button" parent="."]
offset_left = 292.0
offset_top = 34.0
offset_right = 365.0
offset_bottom = 65.0
text = "Teleport"

[node name="bnt_bomb" type="Button" parent="."]
offset_left = 388.0
offset_top = 34.0
offset_right = 459.0
offset_bottom = 65.0
text = "Bomb"

[node name="bnt_smoke" type="Button" parent="."]
offset_left = 485.0
offset_top = 34.0
offset_right = 556.0
offset_bottom = 65.0
text = "Smoke"

[node name="btn_nextscene" type="Button" parent="."]
offset_left = 121.0
offset_top = 232.0
offset_right = 231.0
offset_bottom = 287.0
text = "Next Scene"

[node name="btn_reset" type="Button" parent="."]
offset_left = 4.0
offset_top = 233.0
offset_right = 116.0
offset_bottom = 288.0
text = "Reset"

[node name="txt_terminal" type="TextEdit" parent="."]
offset_left = 347.0
offset_top = 118.0
offset_right = 466.0
offset_bottom = 149.0
text = "1"

[node name="txt_coin" type="TextEdit" parent="."]
offset_left = 82.0
offset_top = 34.0
offset_right = 115.0
offset_bottom = 65.0
text = "1"

[node name="lbl_terminal" type="Label" parent="."]
offset_left = 477.0
offset_top = 118.0
offset_right = 562.0
offset_bottom = 146.0

[node name="chk_boss" type="CheckBox" parent="."]
offset_left = 344.0
offset_top = 155.0
offset_right = 368.0
offset_bottom = 179.0
text = "BOSS!"

[node name="btn_liberate" type="Button" parent="."]
offset_left = 10.0
offset_top = 144.0
offset_right = 136.0
offset_bottom = 176.0
text = "Free Prisoners"

[node name="btn_killboss" type="Button" parent="."]
offset_left = 421.0
offset_top = 155.0
offset_right = 490.0
offset_bottom = 186.0
text = "< KILL"

[node name="btn_demoroom" type="Button" parent="."]
offset_left = 237.0
offset_top = 233.0
offset_right = 351.0
offset_bottom = 287.0
text = "Demo Room"

[node name="btn_shop" type="Button" parent="."]
offset_left = 357.0
offset_top = 233.0
offset_right = 462.0
offset_bottom = 287.0
text = "Shop
 Room"

[node name="btn_challenge" type="Button" parent="."]
offset_left = 467.0
offset_top = 233.0
offset_right = 572.0
offset_bottom = 287.0
text = "Challenge"

[connection signal="pressed" from="bnt_coin" to="." method="_on_bnt_coin_pressed"]
[connection signal="pressed" from="bnt_plant" to="." method="_on_bnt_plant_pressed"]
[connection signal="pressed" from="bnt_spring" to="." method="_on_bnt_spring_pressed"]
[connection signal="pressed" from="bnt_level" to="." method="_on_bnt_level_pressed"]
[connection signal="pressed" from="bnt_muffin" to="." method="_on_bnt_muffin_pressed"]
[connection signal="pressed" from="bnt_clone" to="." method="_on_bnt_clone_pressed"]
[connection signal="pressed" from="bnt_teleport" to="." method="_on_bnt_teleport_pressed"]
[connection signal="pressed" from="bnt_bomb" to="." method="_on_bnt_bomb_pressed"]
[connection signal="pressed" from="bnt_smoke" to="." method="_on_bnt_smoke_pressed"]
[connection signal="pressed" from="btn_nextscene" to="." method="_on_btn_nextscene_pressed"]
[connection signal="pressed" from="btn_reset" to="." method="_on_btn_reset_pressed"]
[connection signal="text_changed" from="txt_terminal" to="." method="_on_txt_terminal_text_changed"]
[connection signal="text_changed" from="txt_coin" to="." method="_on_txt_terminal_text_changed"]
[connection signal="pressed" from="btn_liberate" to="." method="_on_btn_liberate_pressed"]
[connection signal="pressed" from="btn_killboss" to="." method="_on_btn_killboss_pressed"]
[connection signal="pressed" from="btn_demoroom" to="." method="_on_btn_demoroom_pressed"]
[connection signal="pressed" from="btn_shop" to="." method="_on_btn_shop_pressed"]
[connection signal="pressed" from="btn_challenge" to="." method="_on_btn_challenge_pressed"]
